# MyGobang2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MyGoBang2.code-workspace  README.md  acstring.cpp  acstring.h  alphabetaai.cpp  alphabetaai.h  databasemanager.cpp  databasemanager.h  entitlements.plist  gamemodel.cpp  gamemodel.h  globals.cpp  globals.h  localevaluationai.cpp  localevaluationai.h  main.cpp  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mctsai.cpp  mctsai.h  pairhash.cpp  pairhash.h  pattern.cpp  pattern.h  point.h  publictool.cpp  publictool.h  timelogger.cpp  timelogger.h  usermanagerwindow.cpp  usermanagerwindow.h  videodialog.cpp  videodialog.h  zobristhash.cpp  zobristhash.h
logs/: 20250510_153217_ALPHABETA.txt  20250510_153255_ALPHABETA.txt  20250510_173304_ALPHABETA.txt  20250524_114631_ALPHABETA.txt  20250524_114832_ALPHABETA.txt  20250524_115109_ALPHABETA.txt  20250524_120737_ALPHABETA.txt  20250524_132901_ALPHABETA.txt  20250524_134038_ALPHABETA.txt  20250524_171301_ALPHABETA.txt  20250524_173805_ALPHABETA.txt  20250524_175043_ALPHABETA.txt  20250524_183041_AIAI_ALPHABETA.txt  20250524_183520_AI_ALPHABETA_LOCALEVALUATION.txt  20250525_180832_AIAI_ALPHABETA_ALPHABETA.txt  20250525_185245_AIAI_ALPHABETA_ALPHABETA.txt  20250526_104358_AIAI_ALPHABETA_ALPHABETA.txt  20250526_105509_AIAI_ALPHABETA_ALPHABETA.txt  20250526_140517_AI_ALPHABETA.txt  20250526_140630_AI_ALPHABETA.txt  20250526_140730_AI_ALPHABETA.txt  20250526_140938_AI_ALPHABETA.txt  20250526_141034_AI_ALPHABETA.txt  20250526_141449_AI_ALPHABETA.txt  20250526_144107_MAN_LOCALEVALUATION.txt  20250526_144356_AI_ALPHABETA.txt  20250526_144645_AI_ALPHABETA.txt  20250526_145108_AI_ALPHABETA.txt  20250526_150138_AI_ALPHABETA.txt  20250526_150359_AI_ALPHABETA.txt  20250526_150454_AI_ALPHABETA.txt  20250526_150558_AI_ALPHABETA.txt  20250526_150714_AI_ALPHABETA.txt  20250526_151034_AI_ALPHABETA.txt  20250526_151127_AI_ALPHABETA.txt  20250526_151612_AI_ALPHABETA.txt  20250526_151705_AI_ALPHABETA.txt  20250526_193433_AI_ALPHABETA.txt  20250526_193613_AI_ALPHABETA.txt  20250526_193835_AI_ALPHABETA.txt  (+10 more)
res/data/: gomoku.db
res/icons/: MyGobang2.icns
scripts/: dev_env_info.txt  get_dev_env_versions.sh  hardware_info.sh  hardware_info.txt
